--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -9,11 +9,16 @@
 #  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
 #--------------------------------------------------------------
 #  Mod:
+#        08-Oct-2007, K. Luchini         (LUCHINI):
+#          release ip330-R1-0-2
 #        30-Aug-2007, K. Luchini         (LUCHINI):
 #          release ip330-R1-0-1
 #
 #==============================================================
 #
+ip330-R1-0-1:   Build with base-R3-14-8-2 (RTEMS 4.7.1)
+                Build with ipac-R2-8-lcls1
+
 ip330-R1-0-0:   Build with ipac-R1-0-2 instead of ipac-R1-0-1
 
 ip330-R1-0-0:   Initial release
