--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -10,12 +10,17 @@
 #--------------------------------------------------------------
 #  Mod:
 #        08-Oct-2007, K. Luchini         (LUCHINI):
+#          release ip330-R1-0-3
 #          release ip330-R1-0-2
 #        30-Aug-2007, K. Luchini         (LUCHINI):
 #          release ip330-R1-0-1
 #
 #==============================================================
 #
+ip330-R1-0-3:   Build with base-R3-14-9-lcls1 (RTEMS 4.7.1)
+                Build with extensions-R3-14-9
+                Build with ipac-R2-8-lcls2
+
 ip330-R1-0-2:   Build with base-R3-14-8-2 (RTEMS 4.7.1)
                 Build with ipac-R2-8-lcls1
 
