--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -19,6 +19,10 @@
 #
 #==============================================================
 #
+ip330-R1-0-2-1: Small bug fix: Typo for determing the number of single-ended
+                channels was fixed. Build against EPICS R3.14.8.2 and ipac-R2-8-lcls3
+                RTEMS version 4.7.1
+
 ip330-R1-0-4:   Build with base-R3-14-9-lcls1 (RTEMS 4.7.1)
                 Build with ipac-R2-8-lcls4
                 Replace CONFIG_APP with CONFIG_SITE
