--- a/README
+++ b/README
@@ -37,6 +37,16 @@ Add the following lines in your iocTop/<iocName>/<iocName>App/src/Makefile:
 <iocName>_DBD += IP330.dbd
 <iocName>_LIBS += IP330
 
+Add the following lines in your iocTop/<iocName>/<iocName>App/src/<iocName>Main.cpp:
+//  Include these lines to force linker to include xy9660 Ipac carrier
+//	Similar code can be used for other carrier's as needed.
+#include "drvXy9660.h"
+extern "C"
+int addCarrier( const char * cardParams )
+{
+    return ipacAddXVME9660( cardParams );
+}
+
 Add the following lines in your iocTop/<iocName>/iocBoot/ioc<iocName>/st.cmd:
 # Initialize IPAC carrier
 # The 2nd parameter is the base I/O address set by the jumpers on your carrier board
