--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -21,6 +21,9 @@
 #
 #==============================================================
 #
+ip330-R2-0-1:   Change the record to high cb priority
+		Build with base-R3-14-9-lcls3 (RTEMS 4.9.1)
+
 ip330-R2-0-0:   Build with base-R3-14-9-lcls3 (RTEMS 4.9.1)
 
 ip330-R1-0-2-1: Small bug fix: Typo for determing the number of single-ended
