--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,6 +23,8 @@
 #
 #==============================================================
 #
+ip330-R2-2-2:   Build against EPICS R3-14-12 and use ipac-R2-8-lcls8
+
 ip330-R2-2-1:   07-Sep-2011, K. Luchini  (LUCHINI):
                 Upgrade ipac from ipac-R2-8-lcls7 to ipac-R2-11-lcls1 
 
