--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,7 +23,7 @@
 #
 #==============================================================
 #                
-ip330-R         Build with ipac-R2-11-lcls1
+ip330-R2-2-3:         Build with ipac-R2-11-lcls1
              
 ip330-R2-2-2:   Build against EPICS R3-14-12 and use ipac-R2-8-lcls8
 
