Prepare for release ip330-R2-2-5: Add autosaveFields

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -9,6 +9,8 @@
 #  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
 #--------------------------------------------------------------
 #  Mod:
+#        20-Mar-2010, S. Hoobler         (SCONDAM);
+#          release ip330-R2-2-5
 #        20-Mar-2010, S. Hoobler         (SONYA);
 #          release ip330-R2-2-0
 #        29-Apr-2009, K. Luchini         (LUCHINI);
@@ -22,7 +24,9 @@
 #          release ip330-R1-0-1
 #
 #==============================================================
-#                
+#    
+ip330-R2-2-5: Add autosaveFields to ip330App/Db/IP330BSA.template
+            
 ip330-R2-2-4: Build against ipac-R2-11_1-0 which builds for all targets
 
 ip330-R2-2-3:         Build with ipac-R2-11-lcls1
