--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -9,7 +9,7 @@
 #  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
 #--------------------------------------------------------------
 #  Mod:
-#        20-Mar-2010, S. Hoobler         (SCONDAM);
+#        10-Mar-2014, S. Condamoor         (SCONDAM);
 #          release ip330-R2-2-5
 #        20-Mar-2010, S. Hoobler         (SONYA);
 #          release ip330-R2-2-0
