--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,7 +23,9 @@
 #
 #==============================================================
 #    
-            
+ip330-R2-2-5:   S.Condamoor: autosaveField added toIP 330BSA.template  for alarm limits;
+                but removed in MAIN_TRUNK and committed without autsave field again per Ernest.
+
 ip330-R2-2-4: Build against ipac-R2-11_1-0 which builds for all targets
 
 ip330-R2-2-3:         Build with ipac-R2-11-lcls1
