--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -21,6 +21,10 @@
 #
 #==============================================================
 #  
+R2.4.0:		Marcio Donadio
+		- Changes to make code work with both little and big-endian.
+		- EPICS 3.15 and GIT workflow.
+
 ip330-R2-3-0:   J. Mock
                 build with ipac R2.11-1.5.0, which builds for all targets
                 Added registrar support so module works with non-RTEMS OS
