Modified RELEASE files to set according to new standards

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,6 +23,9 @@
 #
 #==============================================================
 #  
+R2.5.2:		Marcio Donadio - Nov 07, 2017
+                - Modified RELEASE files to set according to new standards
+
 R2.5.1:		Marcio Donadio - Nov 07, 2017
 		- Using IPAC R2.11-1.5.1
 
