--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,26 +1,10 @@
 #  Rem: This files describes release notes for
 #       the Acromag ip330 driver and device support.      
 #
-<<<<<<< HEAD
-=======
-#  Auth: 29-Aug-2007, Sheng Peng         (PENGS)
-#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
-#--------------------------------------------------------------
-#  Mod:
-#        20-Mar-2010, S. Hoobler         (SONYA);
-#          release ip330-R2-2-0
-#        29-Apr-2009, K. Luchini         (LUCHINI);
-#          release ip330-R2-0-0
-#        21-Feb-2008, K. Luchini         (LUCHINI);
-#          release ip330-R1-0-4
-#        08-Oct-2007, K. Luchini         (LUCHINI):
-#          release ip330-R1-0-3
-#          release ip330-R1-0-2
-#        30-Aug-2007, K. Luchini         (LUCHINI):
-#          release ip330-R1-0-1
-#
-#==============================================================
-#  
+
+R2.5.0-1.0.0	Bruce Hill - Oct 5, 2018
+	Merged R2.5.0 into pcds branch of ip330 w/ timesync and linux pciE support.
+
 R2.5.0:		Marcio Donadio - Sep 28, 2017
 		- IOC shell function ip330StartConvertByName was created, but
 		  not registered
@@ -40,7 +24,6 @@ ip330-R2-2-5:   S.Condamoor: autosaveField added toIP 330BSA.template  for alarm
                 but removed in MAIN_TRUNK and committed without autosave field again per Ernest.
 
 ip330-R2-2-4: Build against ipac-R2-11_1-0 which builds for all targets
->>>>>>> ip330-R2-3-0
 
 ip330-R2-2-3:         Build with ipac-R2-11-lcls1
              
