--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -24,6 +24,10 @@
 #==============================================================
 #  
 
+R2.6.3:         Marcio Donadio - Nov 27, 2019
+                - Using IPAC R2.15-1.0.0.
+                - Fixed compiler warning messages.  
+
 R2.6.2:         Kukhee Kim - Oct 19, 2019
                 - Using IPAC R2.14-0.2.0 
 
