--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,8 +23,9 @@
 #
 #==============================================================
 #  
-R2.6.4:         Vincent Esposito - Oct 5, 2022
-                - Using IPAC R2.15-1.0.1.
+R2.6.4:         Vincent Esposito - Oct 17, 2022
+                - Using IPAC R2.15-1.0.2.
+                - Compile for rhel7
 
 
 R2.6.3:         Marcio Donadio - Nov 27, 2019
