--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -26,6 +26,7 @@
 R2.6.4:         Vincent Esposito - Oct 17, 2022
                 - Using IPAC R2.15-1.0.2.
                 - Compile for rhel7
+                - Fix warning messages
 
 
 R2.6.3:         Marcio Donadio - Nov 27, 2019
